deployment-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: redis-dep
  namespace: example
spec:
  template:
    metadata: 
      labels:
        app: redis
    
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: "100m"
              memory: "150Mi"
            limits:
              cpu: "500m"
              memory: "500Mi"
            
  replicas: 1
  selector:
    matchLabels:
      app: redis
