deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-dep
  namespace: example
spec:
  template: 
    metadata:
      labels:
        app: worker
    
    spec:
      containers:
        - name: worker
          image: dockersamples/examplevotingapp_worker
          resources:
            requests:
              cpu: "100m"
              memory: "150Mi"
            limits:
              cpu: "500m"
              memory: "500Mi"
  replicas: 1
  selector: 
    matchLabels:
      app: worker
