service-results.yaml
apiVersion: v1
kind: Service
metadata:
  name: results-svc
  namespace: example
spec:
  selector:
    app: results
  ports:
    - port: 80
      targetPort: 80
