service-voting.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-svc
  namespace: example
spec:
  selector:
    app: voting
  ports:
    - port: 80
      targetPort: 80
