networkPolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-policy
  namespace: example
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
