np-result-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: result-postgres
  namespace: example
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: result
      ports:
        - protocol: TCP
          port: 5432
