np-voting-redis.yaml
# voting > redis

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: voting-redis
  namespace: example
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: results
      ports:
        - protocol: TCP
          port: 6379
