np-worker-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: worker-postgres
  namespace: example
spec: 
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: worker
      ports:
        - protocol: TCP
          port: 6379
