np-worker-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: worker-redis
  namespace: example
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: worker
    ports:
      - protocol: TCP
        port: 6379
